fix buttons position and alignment

--- a/styles/main.css
+++ b/styles/main.css
@@ -219,6 +219,8 @@ p {
 .test-button1,
 .test-button2 {
   display: flex;
+  align-items: center;
+  flex-direction: column;
   margin: 3px;
 }
 
